syntax = "proto3";

package yandex.cloud.priv.datasphere.v2;

option go_package = "datasphere";
option java_outer_classname = "Operations";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";

message Zygote {
    string env = 1;
    string provisioning = 2;
    string fuze = 3;
    repeated Slot slots = 4;
}

message RegisteredZygote {
    string name = 1;
    Zygote workload = 2;
}

message ZygoteList {
    repeated RegisteredZygote zygote = 1;
}

message Slot {
    string name = 1;

    Media media = 2;
    Direction direction = 4;

    string contentType = 3;

    enum Media {
        FILE = 0;
        PIPE = 1;
        ARG = 3;
    }

    enum Direction {
        INPUT = 0;
        OUTPUT = 1;
    }
}

message SlotStatus {
    string taskId = 1;
    Slot declaration = 2;

    string connectedTo = 3;

    uint64 pointer = 4;

    State state = 5;

    enum State {
        UNBOUND = 0;
        OPEN = 1;
        CLOSED = 2;
        SUSPENDED = 3;
    }
}
